fix display menu on small viewport

--- a/mi/src/components/header/header.component.scss
+++ b/mi/src/components/header/header.component.scss
@@ -1,6 +1,8 @@
 $header-wrapper-bg-color: #1779ba;
 $header-wrapper-color: white;
 
+@import "../../../node_modules/foundation-sites/scss/util/util";
+
 .header {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   position: relative;
@@ -14,15 +16,28 @@ $header-wrapper-color: white;
     color: $header-wrapper-color;
     .logo {
       padding: 15px;
+      font-weight: 600;
+      @include breakpoint(small only) {
+        text-align: center;
+        border-bottom: 1px solid darken($header-wrapper-bg-color, 5%);
+      }
     }
     nav {
       .menu {
         margin: 0;
+        @include breakpoint(small only) {
+          justify-content: center;
+        }
         li {
           display: inline-block;
           padding: 15px;
           transition: 0.3s ease;
           border-left: 1px solid darken($header-wrapper-bg-color, 5%);
+          @include breakpoint(small only) {
+            &:first-child {
+              border-left: none;
+            }
+          }
           &:hover {
             background: darken($header-wrapper-bg-color, 10%);
             cursor: pointer;
